--- a/Aulas/aula-3/layout/layout.html
+++ b/Aulas/aula-3/layout/layout.html
@@ -71,8 +71,7 @@
             </ul>
         </div>
         <div class="footer-info__video">
-            <iframe src="https://www.youtube.com/embed/tMuU6fViaS8" frameborder="0" allowfullscreen>
-            </iframe>
+            <iframe src="https://www.youtube.com/embed/tMuU6fViaS8" frameborder="0" allowfullscreen></iframe>
         </div>
     </div>
 </footer>
