--- a/aulas/aula-4/app-notification/assets/scss/pages/_footer-options.scss
+++ b/aulas/aula-4/app-notification/assets/scss/pages/_footer-options.scss
@@ -1,12 +1,8 @@
 .footer-options {
   @include clearfix();
 
-  background: #eee;
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  padding: 10px 0;
+  height: 50px;
+  background: #eeeeee;
 
   &__completed {
     float: left;
@@ -14,5 +10,10 @@
 
   &__notifications {
     float: right;
+  }
+
+  button {
+    height: 50px;
+    width: 50px;
   }
 }
