--- a/aulas/aula-4/app-notification/assets/scss/pages/_header-filter.scss
+++ b/aulas/aula-4/app-notification/assets/scss/pages/_header-filter.scss
@@ -3,6 +3,10 @@
 
   padding: 10px 15px;
   background: #eeeeee;
+  position: fixed;
+  left: 0;
+  right: 0;
+  top: 0;
 
   &__date-options {
     float: left;
