--- a/aulas/aula-4/app-notification/assets/scss/pages/_footer-options.scss
+++ b/aulas/aula-4/app-notification/assets/scss/pages/_footer-options.scss
@@ -3,6 +3,10 @@
 
   height: 50px;
   background: #eeeeee;
+  position: fixed;
+  left: 0;
+  right: 0;
+  bottom: 0;
 
   &__completed {
     float: left;
