--- a/aulas/aula-6/atividade-4/css/styles.css
+++ b/aulas/aula-6/atividade-4/css/styles.css
@@ -53,7 +53,8 @@ html, body {
   padding: 15px;
   background-color: #cccccc; }
   .user-github-search__title {
-    text-align: center; }
+    text-align: center;
+    margin-bottom: 5px; }
 
 .search-not-found {
   display: none;
@@ -74,7 +75,7 @@ html, body {
       clear: both; }
     .user-github-details__personal .image {
       float: left;
-      background: center no-repeat;
+      background: url("https://avatars.githubusercontent.com/u/8635147?v=3") center no-repeat;
       background-size: cover;
       height: 150px;
       width: 150px;
@@ -100,14 +101,10 @@ html, body {
       box-sizing: border-box;
       padding: 15px 15px;
       float: left;
-      width: 33.33333%;
-      text-align: center;
-      margin: 0 7.5px;
-      box-sizing: border-box; }
-      .user-github-details__repo .box-repo-detail:first-child {
-        margin-left: 0; }
-      .user-github-details__repo .box-repo-detail:last-child {
-        margin-right: 0; }
+      width: calc(100%/3 - 10px);
+      text-align: center; }
+      .user-github-details__repo .box-repo-detail + .box-repo-detail {
+        margin-left: 15px; }
     .user-github-details__repo .value {
       font-size: 20px;
       font-weight: 600;
