--- a/aulas/aula-8/atividade-2/_sass/_post.scss
+++ b/aulas/aula-8/atividade-2/_sass/_post.scss
@@ -1,13 +1,23 @@
 .post {
-  flex: 1 50%;
-  //width: 50%;
+  flex: 1 1 auto;
+  width: calc(50% - 20px);
   background-color: lighten(blue, 30);
+  margin: 20px;
+
+  &:nth-child(-n+5) {
+    order: 1;
+  }
+
+  &:nth-child(n+6) {
+    order: 3;
+  }
 
   &__image {
     margin-bottom: 20px;
 
     img {
-      width: 50%;
+      display: block;
+      width: 100%;
     }
   }
 
@@ -40,13 +50,14 @@
 
 .post-full {
   background-color: lighten(red, 30);
-  flex: 1 100%;
+  flex: 1 1 auto;
+  width: calc(100% - 20px);
 
   .post__image {
     padding: 0 50px 60px;
 
     img {
-      width: 100%;
+      //width: 100%;
     }
   }
 }
