--- a/aulas/aula-8/atividade-2/_sass/_footer.scss
+++ b/aulas/aula-8/atividade-2/_sass/_footer.scss
@@ -2,7 +2,7 @@
   @include clearfix();
 
   background: #e5e5e5;
-  padding: 30px 50px 30px 0;
+  padding: 30px 50px;
 
   li {
     cursor: pointer;
